fix backface-visibility, add backspace on inputs and fix title

--- a/src/styles/virtualCardDetails.scss
+++ b/src/styles/virtualCardDetails.scss
@@ -119,6 +119,8 @@
   position: absolute;
   width: 100%;
   height: 100%;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
   backface-visibility: hidden;
   z-index: 1;
 }
